--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     </div>
                 </li>
                 <li>
-                    <div class "service-card has-after">
+                    <div class= "service-card has-after">
                         <figure class="card-icon">
                             <img src="./assets/images/service-2.png" width="140" height="140" loading="lazy"
                                 alt="Talleres y Capacitaciones" class="img">
@@ -443,7 +443,7 @@
           <li class="footer-item">
             <ion-icon name="call" aria-hidden="true"></ion-icon>
 
-            <a href="tel:+7894631546876" class="contact-link">+573045672501</a>
+            <a href="tel:+7894631546876" class="contact-link">+573128450024</a>
           </li>
 
           <li class="footer-item">
@@ -492,20 +492,10 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 EducaDrogas | All Rights Reserved by <a href="#" class="copyright-link">codewithsadee</a>
+          &copy; 2023 EduSex | Todos los derechos reservados <a class="copyright-link">Integrantes</a>
         </p>
 
         <ul class="footer-bottom-list">
-
-          <li>
-            <a href="#" class="footer-bottom-link">Privacy Policy</a>
-          </li>
-
-          <li>
-            <a href="#" class="footer-bottom-link">Terms of Use</a>
-          </li>
-
-        </ul>
 
       </div>
     </div>
