--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2023 EduSex | Todos los derechos reservados, hecho por<a class="copyright-link">Gisell Avendaño-Nataly Gutiérrez</a>
+          &copy; 2023 EduSex | Hecho por <a class="copyright-link">Gisell Avendaño-Nataly Gutiérrez</a>
         </p>
 
         <ul class="footer-bottom-list">
